# rag-chat-app

./: .gitignore  Dockerfile  README.md  config.py  main.py  pyproject.toml
.github/workflows/: deploy.yaml
chroma_db/fe2cb5d4-5bbb-4e0b-b53c-feac422ce4e9/: index_metadata.pickle
ingestion/: ingest.py  sleeper_client.py
ingestion/sleeper/: data_transformers.py  sleeper_client.py
terraform/: main.tf  outputs.tf  variables.tf
vector/: preprocessing.py  query_engine.py  vector_store.py
